# CarAICAM

./: MikuCarLauncher_接入提示词.md  README.md  install_debug.bat  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README-model.txt
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/jlxc/vehicleinfoncnn/: Detection.java  MainActivity.java  OverlayView.java  RearVisionBridge.java  StreamFrameRenderer.java  VehicleDetector.java
app/src/main/res/values/: styles.xml
scripts/: setup_deps.sh
